# IaCT

./: README.md  pyproject.toml
src/IaCT_by_NEEtojin/: __init__.py  cli.py
src/IaCT_by_NEEtojin/initializer/: __init__.py  get_data.py
src/IaCT_by_NEEtojin/resource_attribute/: cloudformation.py  get_attribute_aws.py  get_attribute_aws_terraform.py
src/IaCT_by_NEEtojin/resource_mapping/: cloudformation.py
